# ParseCAN

./: .gitignore  LICENSE  README.md  board_spec.yml  example.py  fsae_can_spec.yml  requirements.txt  setup.cfg  setup.py
ParseCAN/: __init__.py  error.py  helper.py  meta.py  parse.py  plural.py
ParseCAN/data/: Frame.py  Log.py  Message.py  Race.py  __init__.py  evil_macros.py  frame.py  log.py
ParseCAN/spec/: CAN.py  Car.py  Message.py  Segment.py  Value.py  __init__.py  board.py  car.py  computer.py  protocol.py  system.py
ParseCAN/spec/bus/: Bus.py  Message.py  Segment.py  Value.py  __init__.py  atom.py  bus.py  enum.py  enumeration.py  frame.py  message.py  segment.py  type.py
ParseCAN/spec/can/: CAN.py  Message.py  Segment.py  Value.py  __init__.py
ParseCAN/spec/computer/: __init__.py  architecture.py  computer.py  participation.py  protocol.py
examples/: .gitignore  133202.TSV  api.py  can_spec_my18.yml  dump.yml  example_can_spec.yml  livetool.py  log2csv.py  log_parsers.py  my18_can_spec.yml  numpy_matrix.py  parse_my18.py  pcan-live.py  test.py  trace-log.py  tsv-log.py  xbee_live.py
examples/ParseCAN/: parse.py
examples/ParseCAN/data/: Frame.py
examples/ParseCAN_old/: parse.py  plural.py
examples/ParseCAN_old/data/: Log.py  Race.py  evil_macros.py
examples/ParseCAN_old/spec/: Car.py  __init__.py
samples/: fsae_can_spec.yml
src/: CANMessage.py  CANSpec.py  Log.py  MessageType.py  Race.py  SegmentType.py  ValueType.py  main.py  parse.py
src/ParseCAN/: __init__.py  plural.py
src/ParseCAN/data/: __init__.py
(+15 files in other folders)
