[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MotoParseCAN"
version = "1.0.0"
authors =
  { name="Dani White" },
  { name="Mingfei Duan" },
  { name="Barry Xu" },
  { name="Nick Stathas" },
  { name="Reng Zheng" },
description = "A Python package for integrating CAN specifications and parsing logged CAN messages."
readme = "README.md"
requires-python = ">=3.8"
classifiers =
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache-2.0",
    "Operating System :: OS Independent",

[project.urls]
Homepage = "https://github.com/MITMotorsports/ParseCAN"
Issues = "https://github.com/MITMotorsports/ParseCAN/issues"

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
